# Theiss_package

./: Libraries.TXT  README.md  SocSynStreets.py  package.py  pyproject.toml  social_syntax_streets.py
Experimentation results/E1_petrogradskaya/: S1_streets_morphology_functions_petr.geojson
Experimentation results/E2_dijon/: dijon_functions.geojson  narvsk_poi_counts.csv
Experimentation results/E3_southwestern_grey_belt_urban_intervention/: dij_poi_counts.csv
