[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theiss-package"
version = "0.1.0"
description = "GIS urban analysis package"
authors = [{name = "Said Bereiya", email = "your.email@example.com"}]
dependencies = [
    "geopandas",
    "folium",
    "seaborn",
    "osmnx",
    "pandas",
    "mapclassify",
    "numpy",
    "contextily",
    "matplotlib",
    "ezdxf"
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT"
]