[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SocSynStreets"
version = "0.1.2"
description = "GIS urban analysis package"
authors = [{name = "Said Bereiya", email = "your.email@example.com"}]
dependencies = [
    "geopandas",
    "folium",
    "seaborn",
    "osmnx",
    "pandas",
    "mapclassify==2.10.0",
    "numpy",
    "contextily",
    "matplotlib",
    "ezdxf" 
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT"
]
